# cv-analyzer

./: .gitignore  Dockerfile  README.md  db.json  pyproject.toml  requirements.txt
analyser/analyze/drive/: autheticate.py
analyze/: ai.py  app.py  create_job.py  helper.py  import_cv.py
analyze/drive/: download_cv.py
